# wheels-ci-action

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  EXAMPLE_RIGNORE.md  README.md  action.yml  generate_summary.py  pyproject.toml
.github/workflows/: ci.yml
examples/: post-summary-comment.yml
tests/: __init__.py  test_generate_summary.py
tests/__inline_snapshot__/test_generate_summary/TestGenerateTable.test_generate_complex_table/: 2862b59e-e298-4351-9094-91218ff7c1f8.md
tests/__inline_snapshot__/test_generate_summary/TestGenerateTable.test_generate_empty_table/: 233401cd-22d1-4cae-9bb3-49b8edebcec8.md
tests/__inline_snapshot__/test_generate_summary/TestGenerateTable.test_generate_simple_table/: b9b6d8f7-2145-4f52-aad8-b5ec38a5bbbf.md
